2006-05-30 Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.Ide.Commands/ViewCommands.cs:
	* MonoDevelop.Ide.addin.xml:
	* MonoDevelop.Ide.Gui.Pads.ProjectPad/ProjectFileNodeBuilder.cs:
	* MonoDevelop.Ide.Gui.Pads.ProjectPad/SystemFileNodeBuilder.cs:
	  Implemented OpenWith command for project files.
	  
	* MonoDevelop.Ide.Gui/DisplayBindingService.cs:
	* MonoDevelop.Ide.Gui/Workbench.cs: Implemented GetFileViewers
	  command, which returns all available viewers (internal or
	  external) for a file.
	  
	* MonoDevelop.Ide.Codons/IDisplayBinding.cs:
	* MonoDevelop.Ide.Gui.BrowserDisplayBinding/BrowserDisplayBinding.cs:
	  Added DisplayName property to IDisplayBinding.
	
	* MonoDevelop.Ide.mdp:
	* Makefile.am: Updated.
	
2006-05-29  David Makovský (Yakeen) <yakeen@sannyas-on.net> 

	* MonoDevelop.Ide.Gui.Content/ICodeStyleOperations.cs: reverted interface changes
	* MonoDevelop.Ide.Gui/ViewCommandHandlers.cs: implemented upper/lower functionality here

2006-05-23  David Makovský (Yakeen) <yakeen@sannyas-on.net> 

	* MonoDevelop.Ide.Gui.Content/ICodeStyleOperations.cs: enhanced interface for new editor actions
	* MonoDevelop.Ide.Commands/EditCommands.cs: added new enum members for these actions
	* MonoDevelop.Ide.addin.xml: included in edit menu
	* MonoDevelop.Ide.Gui/ViewCommandHandlers.cs: default handlers

2006-05-12 Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.Ide.Gui/ProjectOperations.cs: Track api changes.

2006-05-05 Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.Ide.Codons/WorkbenchContextCodon.cs:
	* MonoDevelop.Ide.Codons/SolutionPadCodon.cs: Use the new ChildCodons
	  attribute instead of Category.
	* MonoDevelop.Ide.addin.xml: Added application description.

2006-05-04 Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.Ide.addin.xml: Updated versions.
	* MonoDevelop.Ide.mdp: Updated.
	* MonoDevelop.Ide.Gui/IdeStartup.cs: Do check for bug 77135 only
	  in suse 10.

2006-04-21 Lluis Sanchez Gual  <lluis@novell.com>
